<resources>
    <string name="app_name">Wave</string>

    <string name="action_scan">扫描歌曲</string>
    <string name="image_description">image</string>

    <string name="action_play_controller">播放控制</string>
    <!-- Menu -->
    <string name="nav_playlist">歌单</string>
    <string name="nav_music">歌曲</string>
    <string name="nav_artist">艺术家</string>
    <string name="nav_album">专辑</string>
    <string name="nav_setting">设置</string>
    <string name="nav_genres">类型</string>
    <string name="nav_quit">退出</string>

    <!-- Tab -->
    <string name="tab_playlist">歌单</string>
    <string name="tab_music">歌曲</string>
    <string name="tab_artist">艺术家</string>
    <string name="tab_album">专辑</string>
    <string name="tab_genres">类型</string>

    <!-- PopupMenu的一些字段 -->
    <string name="popup_menu_add_queue">添加到队列</string>
    <string name="popup_menu_add_playlist">添加到播放列表</string>
    <string name="popup_menu_set_ring">设为铃声</string>
    <string name="popup_menu_delete">删除</string>
    <string name="popup_menu_play_all">全部播放</string>

    <!-- dialog 提示字段 -->
    <string name="input_empty">输入不能为空</string>
    <string name="input_exist">歌单已经存在</string>
    <string name="message_created_playlist">歌单「 %s 」创建成功</string>
    <string name="message_removed_playlist">歌单「 %s 」删除成功</string>
    <string name="message_add_to_playlist">添加到歌单成功</string>
    <string name="add_to_playlist_title">给歌单添加歌曲</string>
    <string name="action_undo">撤销</string>
    <string name="action_cancel">取消</string>
    <string name="action_create">创建</string>
    <string name="action_ok">确定</string>

    <string name="message_repeat_all">列表循环</string>
    <string name="message_repeat_none">列表播放</string>
    <string name="message_repeat_one">单曲循环</string>
    <string name="message_shuffle">随机播放</string>

    <string name="no_artist">UnKnow</string>
    <string name="no_album">0 album</string>
    <string name="album">Album</string>
    <string name="song">Song</string>

    <string name="setting_default_page_summer">起始页面</string>
    <string name="setting_color_theme_summer">主题色调,默认为少女粉</string>

    <string-array name="pages">
        <item name="0">歌单</item>
        <item name="1">歌曲</item>
        <item name="2">艺术家</item>
        <item name="3">专辑</item>
        <item name="4">类型</item>
    </string-array>
    <string-array name="page_value">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
    </string-array>

    <string-array name="colors">
        <item name="0">少女粉</item>
        <item name="1">姨妈红</item>
        <item name="2">咸蛋黄</item>
        <item name="3">早苗绿</item>
        <item name="4">胖次蓝</item>
        <item name="5">基佬紫</item>
    </string-array>

    <string-array name="color_value">
        <item name="0">0</item>
        <item name="1">1</item>
        <item name="2">2</item>
        <item name="3">3</item>
        <item name="4">4</item>
        <item name="5">5</item>
    </string-array>
</resources>
